--- a/source/_posts/2017-08-01-CSS多行文本溢出省略显示.md
+++ b/source/_posts/2017-08-01-CSS多行文本溢出省略显示.md
@@ -12,6 +12,8 @@ categories:
 
 文本溢出我们经常用到的应该就是text-overflow:ellipsis了，相信大家也很熟悉，但是对于多行文本的溢出处理确接触的不是很多，最近在公司群里面有同事问到，并且自己也遇到过这个问题，所以专门研究过这个问题。
 
+<!-- more -->
+
 首先我们回顾一下以前实现单行缩略是可以通过下面的代码实现的（部分浏览器需要设置宽度）：
 
 ```css
@@ -26,9 +28,9 @@ p {
 
 首先，WebKit内核的浏览器实现起来比较简单，可以通过添加一个-webkit-line-clamp的私有属性来实现，-webkit-line-clamp是用来限制在一个块元素显示的文本的行数。 为了实现这个效果，它需要组合其他的WebKit属性：
 
-    1. display: -webkit-box 将对象作为弹性伸缩盒子模型显示；
-    2. -webkit-box-orient 设置或检索伸缩盒对象的子元素的排列方式；
-    3. text-overflow: ellipsis 用省略号“…”隐藏超出范围的文本。
+1. display: -webkit-box 将对象作为弹性伸缩盒子模型显示；
+2. -webkit-box-orient 设置或检索伸缩盒对象的子元素的排列方式；
+3. text-overflow: ellipsis 用省略号“…”隐藏超出范围的文本。
 
 具体代码参考如下：
 
@@ -74,6 +76,6 @@ p:after {
 
 不过这样会有一点问题：
 
-    1. 需要知道显示的行数并设置行高才行；
-    2. IE6/7不支持after和content，需要添加一个标签来代替；
-    3. 省略号的背景颜色跟文本背景颜色一样，并且可能会遮住部分文字，建议可以使用渐变的png背景图片代替。
+1. 需要知道显示的行数并设置行高才行；
+2. IE6/7不支持after和content，需要添加一个标签来代替；
+3. 省略号的背景颜色跟文本背景颜色一样，并且可能会遮住部分文字，建议可以使用渐变的png背景图片代替。
