--- a/source/_posts/2017-08-01-CSS多行文本溢出省略显示.md
+++ b/source/_posts/2017-08-01-CSS多行文本溢出省略显示.md
@@ -46,7 +46,7 @@ p {
 
 这个方法合适WebKit浏览器或移动端（绝大部分是WebKit内核的）浏览器，效果可以查看：
 
-<script async src="//jsfiddle.net/ricosmall/hef3ht5a/2/embed/html,css,result/dark/"></script>
+<iframe width="100%" height="300" src="//jsfiddle.net/ricosmall/hef3ht5a/embedded/result,css,html/dark/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 ## 其他浏览器的解决方案
 
@@ -72,7 +72,7 @@ p:after {
 
 效果如下：
 
-<script async src="//jsfiddle.net/ricosmall/nsp4qoa4/embed/html,css,result/dark/"></script>
+<iframe width="100%" height="300" src="//jsfiddle.net/ricosmall/nsp4qoa4/embedded/result,css,html/dark/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
 不过这样会有一点问题：
 
