--- a/source/_posts/2017-08-27-手把手教你在阿里云ECS上面安装nginx.md
+++ b/source/_posts/2017-08-27-手把手教你在阿里云ECS上面安装nginx.md
@@ -140,7 +140,7 @@ cd /usr/local/nginx
 
 # 检查一下是否安装配置成功
 cd ./sbin
-nginx -t
+./nginx -t
 
 # 正常输出如下
 nginx: the configuration file /usr/local/nginx/conf/nginx.conf syntax is ok
