--- a/source/_posts/2017-09-29-前端框架引入的意义.md
+++ b/source/_posts/2017-09-29-前端框架引入的意义.md
@@ -16,5 +16,7 @@ categories:
 
 jQuery等库与前端MVC间的区别主要表现在以下几个方面：第一，二者解决的问题存在着一定的差异，即jQuery主要应用于对代码、封装等问题的解决。而其也为系统实际运行提供了多种封装方法，由此稳固了代码结构的合理性设置，而前端MVC框架与jQuery等库在问题解决方面有所不同，其更加倾向于对程序组织方面问题的解决，进而推动系统中的程序运行逐渐趋于规范化。另外，前端框架为系统运行提供了一套规范化的问题解决方案，致使系统运行中出现相应问题时可及时参照方案对问题展开及时、有效的解决，且最终提高系统运行的稳定性；第二，jQuery的操作中心为DOM，而MVC框架的中心却为模型。因而MVC与jQuery相比其流程的变更更为及时，且也为现代工程师的代码编写提供了有利条件。另外，MVC框架解决了传统HTML源码处理中的问题，促使相关工作人员在实际工作开展过程中即可通过参照前端MVC框架中的规范化流程打通后端处理，提高系统中的整体运行效率。
 
+近年来，Web前端MVC框架的开发意义逐渐引起了人们的关注，而从Web前端MVC框架的适用范围研究中即可看出其在系统运行中占着至关重要的位置。对于此，可以从以下几个方面入手分析：第一，从大量的实践中可以看出，Web前端MVC框架不适用于页面型产品中，造成此现象的原因主要归咎于此类产品主要依附于服务器来运作自身系统，因而在此背景下，jQuery等库会更好的满足其互动性需求，且最终导致Web前端MVC框架在页面型产品中无法发挥其自身效用；第二，在软件型产品，对于Web前端MVC框架的应用是非常必要的。首先由于软件型产品对数据操作能力的要求较大，因而若将Web前端MVC框架应用于软件型产品实际运行中，那么框架中的数据模型层会在一定程度上满足其数据操作需求，且会在系统实际运行中出现问题时，对数据展开及时的更新处理。其次，软件型产品中会涉及到大量的视图操作，但是由于jQuery等库无法完成高效率的操作行为，因而将Web前端MVC框架应用于其中，会在一定程度上更好的满足程序开发需求
+
 参考：
 [Web前端框架与类库的思考](http://www.cnblogs.com/coco1s/p/4040108.html) | [@ChokCoco](https://github.com/chokcoco)
