--- a/source/_posts/2017-05-04-Mac常用软件收集.md
+++ b/source/_posts/2017-05-04-Mac常用软件收集.md
@@ -16,7 +16,11 @@ categories:
 
 ### 常用软件
 
-Snip 截图软件，qq开发一款很好用的截图工具，谁用谁知道。
-Alfred 快速启动、搜索工具，比自带的spotlight强太多了。
-Launchbar 同Alfred，但是理念不同，也很强大。
-Cornerstone 强大的SVN版本管理mac端GUI软件。
+[Snip](http://snip.qq.com/) 截图软件，qq 开发一款很好用的截图工具。
+[Alfred](https://www.alfredapp.com/) 快速启动、搜索工具，比自带的 spotlight 强太多了。
+[Launchbar](https://www.obdev.at/products/launchbar/index.html) 同 Alfred，但是理念不同，也很强大。
+[Cornerstone](https://cornerstone.assembla.com/) 强大的 mac 版 SVN 版本管理 GUI 软件。
+[MacDown](https://macdown.uranusjr.com/) mac 版 Markdown 编辑器。
+[MPlayerX](http://mplayerx.org/) mac 版视频播放器，好用。
+[The Unarchiver](https://theunarchiver.com/) mac 版文件解压工具。
+[Spectacle](https://www.spectacleapp.com/) mac 版分屏工具。
