--- a/source/_posts/2018-03-29-学习React（二）.md
+++ b/source/_posts/2018-03-29-学习React（二）.md
@@ -9,6 +9,10 @@ categories:
 
 ## Components
 
+React 组件分为函数式组件（Functional Components） 和类式组件（Class Components）。从字面意思可以看出来，组件可以写成函数形式，也可以写成类的形式。
+
+<!-- more -->
+
 ### Functional Components
 
 `index.js` 文件内容：
