--- a/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
+++ b/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
@@ -28,7 +28,7 @@ categories:
 
 因此马上就做一个音频播放器的组件 `AudioPlayer.vue` 的组件，具体代码如下：
 
-```javascript
+```html
 <template>
   <div class="player">
     <div
