--- a/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
+++ b/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
@@ -22,6 +22,8 @@ categories:
 
 <!-- more -->
 
+## 探索过程
+
 使用 google 大法了解到，移动设备为了节省流量，禁用了 `audio` 元素的自动播放的功能。必须要有用户交互才能播放音频，比如说 `touchstart` 事件。
 
 了解到这个重要信息，马上也就可以找到相应的解决办法，那就是模拟 `touchstart` 事件啦，然后把这个事件的触发放到 Vue 的生命周期方法中，比如 `mounted`。
@@ -125,3 +127,5 @@ export default {
 ```
 
 去浏览器预览的时候发现，上面的代码在 PC 和 Android 手机上和预期一样，可以自动播放。但是在 iOS 上依然不行。
+
+## 解决方法（不彻底）
