--- a/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
+++ b/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
@@ -126,6 +126,12 @@ export default {
 </style>
 ```
 
-去浏览器预览的时候发现，上面的代码在 PC 和 Android 手机上和预期一样，可以自动播放。但是在 iOS 上依然不行。
+去浏览器预览的时候发现，上面的代码在 PC 和 Android 手机上和预期一样，可以自动播放。但是在 iOS 上依然不行。通过更进一步的了解，发现在微信内置浏览器内有一种解决办法，利用的是微信内置浏览器的事件 `WeixinJSBridgeReady`。具体实现见下一小节。
 
 ## 解决方法（不彻底）
+
+组件代码如下：
+
+```html
+
+```
