--- a/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
+++ b/source/_posts/2018-03-30-解决Vue项目中audio元素在移动端无法自动播放的问题.md
@@ -130,8 +130,145 @@ export default {
 
 ## 解决方法（不彻底）
 
-组件代码如下：
+目前自动播放功能实现情况如下：
+
+| 平台 | 系统自带浏览器 | 微信内置浏览器 |
+| --- | --- | --- |
+| PC | ✔️ | ✔️ |
+| Android | ✔️ | ✔️ |
+| iOS | ✔️ | ✔️ |
+
+在实现上述功能的基础上，增加播放旋转，点击切换播放、暂停功能。最终组件代码如下：
 
 ```html
+<template>
+  <div class="player">
+    <div
+      class="player-cd"
+      id="trigger"
+      :style="{transform: 'rotate(' + transformValue + 'deg)'}"
+    >
+      <audio
+        :src="src"
+        id="audio"
+        loop
+      ></audio>
+  </div>
+  </div>
+</template>
+<script>
+export default {
+  data () {
+    return {
+      src: 'http://o9o8lcfa3.bkt.clouddn.com/%E5%88%9A%E5%A5%BD%E9%81%87%E8%A7%81%E4%BD%A0.m4a',
+      playing: false,
+      transformValue: 10,
+      transformInterval: null
+    }
+  },
+  mounted () {
+    let trigger = document.getElementById('trigger')
+    let audio = document.getElementById('audio')
+    trigger.addEventListener('touchstart', () => {
+      audio.play()
+      this.togglePlay()
+    })
 
+    // 单独处理微信内置浏览器自动播放
+    document.addEventListener('WeixinJSBridgeReady', () => {
+      audio.play()
+    }, false)
+
+    // 模拟触发 「touchstart」 事件
+    this.createTouchstartEventAndDispatch(trigger)
+  },
+  methods: {
+    createTouchstartEventAndDispatch (el) {
+      let event = document.createEvent('Events')
+      event.initEvent('touchstart', true, true)
+      el.dispatchEvent(event)
+    },
+    togglePlay () {
+      this.playing = !this.playing
+      if (this.playing) {
+        this.transformInterval = setInterval(
+          () => this.changeTransformValue(),
+          100
+        )
+      } else {
+        clearInterval(this.transformInterval)
+        this.transformInterval = null
+      }
+    },
+    changeTransformValue () {
+      this.transformValue += 10
+    }
+  },
+  watch: {
+    playing (playing) {
+      let audio = document.getElementById('audio')
+      if (playing) {
+        audio.play()
+      } else {
+        audio.pause()
+      }
+    }
+  }
+}
+</script>
+<style lang="less" scoped>
+// var
+@cdWidth: 50vmin;
+
+// mixins
+// 水平垂直居中的 flex 布局
+.flex-align-justify-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// 直径为 width 的圆
+.circle (@width) {
+  width: @width;
+  height: @width;
+  border-radius: 50%;
+}
+
+// block 伪类
+.absolute-block {
+  content: '';
+  display: block;
+  position: absolute;
+}
+
+.player {
+  .flex-align-justify-center;
+
+  width: 100vw;
+  height: 100vh;
+
+  &-cd {
+    .flex-align-justify-center;
+    .circle(@cdWidth);
+    background: linear-gradient(#666, #000);
+    transition: all .2s linear;
+
+    .absolute-circle-block (@color, @width) {
+      .absolute-block;
+      .circle(@width);
+      background: @color;
+    }
+
+    &::before {
+      .absolute-circle-block(darken(#f00, 5%), 20vmin);
+    }
+
+    &::after {
+      .absolute-circle-block(#222, 5vmin);
+    }
+  }
+}
+</style>
 ```
+
