--- a/source/_posts/2018-07-20-微信公众号问题记录（一）.md
+++ b/source/_posts/2018-07-20-微信公众号问题记录（一）.md
@@ -21,7 +21,9 @@ categories:
 
 ### redirect_uri 域名与后台配置不一致
 
-> 错误信息：redirect_uri 域名与后台配置不一致，错误码：10003
+错误信息：
+
+> redirect_uri 域名与后台配置不一致，错误码：10003
 
 错误截图：
 
@@ -43,7 +45,9 @@ https://open.weixin.qq.com/connect/oauth2/authorize?appid=APPID&redirect_uri=RED
 
 ### 不支持微信开放平台 Appid
 
-> 错误信息：不支持开放平台 Appid，请使用公众号 Appid，错误代码：10016
+错误信息：
+
+> 不支持开放平台 Appid，请使用公众号 Appid，错误代码：10016
 
 错误截图：
 
@@ -57,7 +61,9 @@ https://open.weixin.qq.com/connect/oauth2/authorize?appid=APPID&redirect_uri=RED
 
 ### 调用支付 JSAPI 缺少参数
 
-> 错误信息：调用支付 JSAPI 缺少参数：total_fee
+错误信息：
+
+> 调用支付 JSAPI 缺少参数：total_fee
 
 错误截图：
 
@@ -101,7 +107,9 @@ if (typeof WeixinJSBridge == "undefined") {
 
 ### 商户传入的 appid 参数不正确
 
-> 错误信息：商户传入的 appid 参数不正确，请联系商户处理。
+错误信息：
+
+> 商户传入的 appid 参数不正确，请联系商户处理。
 
 错误截图：
 
@@ -113,7 +121,9 @@ if (typeof WeixinJSBridge == "undefined") {
 
 ### 支付验证签名失败
 
-> 错误信息：支付验证签名失败。
+错误信息：
+
+> 支付验证签名失败。
 
 错误截图：
 
